<resources>
    <string name="app_name">PMC Maker</string>
    <string name="app_description">パワートレーニングに欠かせないPMCを描いてくれるアプリです。   日々のTSSを入れると、PMCグラフの他、オーバートレーニング、最適負荷などについて簡単な診断もしてくれます  Let\'s get tired!!　(^^)</string>
    <string name="app_help">【用語】\n
TSS : 日々のトレーニング負荷\n
ATL : 短期(7日)の累積負荷。疲労度に相当\n
CTL : 長期(42日)の累積負荷。強さに相当\n
TSB : ATL-TSB。好調さに相当</string>

    <string name="nav_title_home">ホーム</string>
    <string name="nav_title_run">練習記録</string>
    <string name="nav_title_pmc">PMC</string>
    <string name="nav_title_diagnosis">診断</string>
    <string name="nav_title_setting">設定</string>

    <!-- 汎用 -->
    <string name="save_btn_label">保存</string>
    <string name="cancel_btn_label">キャンセル</string>
    <string name="date_format">%d/%02d/%02d</string>
    <string name="time_format">%02d:%02d</string>
    <string name="term_format">%d時間%d分</string>
    <string name="ctx_menu_edit">編集</string>
    <string name="ctx_menu_delete">削除</string>
    <string name="delete_btn_label">削除</string>
    <string name="delete_message">削除しました</string>


    <!-- ダイアログ -->
    <string name="del_confirm_dialog_title">削除確認</string>
    <string name="del_confirm_dialog_message">データを削除してよろしいですか？</string>
    <string name="del_confirm_dialog_ok">はい</string>
    <string name="del_confirm_dialog_cancel">キャンセル</string>

    <!-- トレーニングリスト画面 -->
    <string name="title_run2">トレーニングリスト</string>
    <string name="one_run_term_label">継続時間</string>

    <!-- トレーニング編集画面 -->
    <string name="title_run_edit">トレーニングデータ編集</string>
    <string name="title_run_new">新規トレーニングデータ</string>

    <string name="run_edit_date_label">走行日</string>
    <string name="run_edit_term_label">走行時間</string>
    <string name="run_edit_tss_label">TSS</string>
    <string name="run_edit_tss_hint">稼いだTSS</string>
    <string name="run_edit_km_label">距離</string>
    <string name="run_edit_km_hint">走った距離</string>
    <string name="run_edit_km_unit_label">km</string>
    <string name="run_edit_kcal_label">消費エネ</string>
    <string name="run_edit_kcal_hint">カロリー</string>
    <string name="run_edit_kcal_unit_label">kcal</string>
    <string name="run_edit_memo_label">メモ</string>
    <string name="run_edit_memo_hint">感想などご自由に</string>
    <string name="run_edit_place_label">場所</string>
    <string name="run_edit_place_indoor">室内</string>
    <string name="run_edit_place_outdoor">屋外</string>
    <string name="run_edit_menu_label">メニュー</string>

    <!-- メニューリスト画面 -->
    <string name="title_menu_from_config">トレーニングメニュー編集</string>
    <string name="title_menu_from_run_edit">メニューを選択して下さい</string>

    <!-- メニュー編集画面 -->
    <string name="title_menu_edit">メニューデータ編集</string>
    <string name="title_menu_new">新規メニューデータ</string>

    <string name="menu_edit_name_label">名前</string>
    <string name="menu_edit_name_hint">SST60minなど</string>
    <string name="menu_edit_memo_label">説明</string>
    <string name="menu_edit_memo_hint">FTP90%など</string>

    <!-- 設定画面 -->
    <string name="title_setting">各種設定画面</string>
    <string name="setting_element_header">トレーニングデータとして記録する要素</string>
    <string name="setting_term_header">PMC計算用の各種期間（日数）</string>
    <string name="setting_atl_term_label">ATLの累積期間(初期値7日)</string>
    <string name="setting_ctl_term_label">CTLの累積期間(初期値42日)</string>
    <string name="setting_pmc_term_label">PMCの描画期間(初期値30)</string>
    <string name="setting_days_prompt">日数を入力してください</string>
    <string name="setting_menu_edit_label">トレーニングメニュー編集</string>

    <string name="setting_date_label">日付（必須項目）</string>
    <string name="setting_tss_label">Earned TSS（必須項目）</string>
    <string name="setting_term_label">継続時間（時：分）</string>
    <string name="setting_km_label">走行距離（km）</string>
    <string name="setting_kcal_label">消費エネルギー（kcal）</string>
    <string name="setting_place_label">走行場所（室内・屋外）</string>
    <string name="setting_memo_label">メモ欄</string>
    <string name="setting_menu_label">トレーニングメニュー名</string>
    <string name="run_edit_unselected">未選択</string>
    <string name="run_menu_unselected">未選択</string>
    <string name="setting_appearance_header">見栄えなどの設定</string>
    <string name="look_card">カード形式</string>
    <string name="look_flat">フラット形式</string>
    <string name="look_label">一覧表の表示形式</string>

    <string name="setting_diag_header">PMCをもとにした分析項目</string>
    <string name="setting_diag1_label">①体調診断(TSB&lt;50?）</string>
    <string name="setting_diag2_label">②トレーニング効果(TSB&lt;-20?)</string>
    <string name="setting_diag3_label">③レース条件(TSB=5?)</string>
    <string name="setting_diag4_label">④到達目標(CTL≒100?)</string>
    <string name="setting_diag5_label">⑤適切な強度向上(+CTL>5/w?)</string>
    <string name="setting_diag6_label">⑥オーバートレーニング(+CTL>7×4w?)</string>
    <string name="setting_diag7_label">⑦サボり疑惑(-CTL×2w?)</string>
    <string name="setting_diag8_label">⑧オーバートレーニング(+ATL>70/w?)</string>
    <string name="setting_diag9_label">⑨オーバートレーニング(ATL>CTL?)</string>

    <string name="setting_backup_header">トレーニングデータのバックアップ</string>
    <string name="setting_restore_label">ストレージから復旧</string>
    <string name="setting_backup_label">ストレージへバックアップ</string>

    <string name="overwrite_confirm_dialog_title">上書き確認</string>
    <string name="overwrite_confirm_dialog_cancel">キャンセル</string>
    <string name="overwrite_confirm_backup_dialog_message">練習記録・練習メニューをバックアップ保存しますか？</string>
    <string name="overwrite_confirm_dialog_message_run">既存の練習記録をバックアップデータで上書きしますか？</string>
    <string name="overwrite_confirm_dialog_done_run">練習記録復旧完了</string>
    <string name="overwrite_confirm_dialog_message_menu">既存の練習メニューデータをバックアップデータで上書きしますか？</string>
    <string name="overwrite_confirm_dialog_done_menu">メニューデータ復旧完了</string>

    <!-- PMC画面 -->
    <string name="pmc_atl_name">ATL</string>
    <string name="pmc_tsb_name">TSB</string>

    <string name="one_run_time_format">HH時間mm分</string>
    <string name="pmc_ctl_name">CTL</string>
    <string name="pmc_tss_name">TSS</string>
    <string name="pmc_chart_description">TSSは右軸。ATL/CTL/TSBは左軸です。</string>
    <string name="pmc_recent_values">【本日】ATL:%2d / CTL:%2d / TSB:%2d</string>
    <string name="pmc_recent_label">【最新のATL/CTL/TSB】</string>

    <string name="diag_1_title_label">【1】体調診断</string>
    <string name="diag_1_subtitle_label">【TSB】</string>
    <string name="diag_1_ng">風邪をひくリスクが高くなっています！</string>
    <string name="diag_1_ng2">１週間平均では-50を下回っているため注意しましょう</string>
    <string name="diag_1_ok">特に問題ありません</string>
    <string name="diag_1_description">TSBが-50以下の状態が続くと風邪をひくリスクが高くなると言われています。</string>
    <string name="diag_1_unit" >TSS</string>

    <string name="diag_2_title_label">【2】トレーニングパフォーマンス</string>
    <string name="diag_2_subtitle_label">【TSB】</string>
    <string name="diag_2_ng">トレーニングのパフォーマンスが低下しています</string>
    <string name="diag_2_ok">特に問題ありません。</string>
    <string name="diag_2_description">TSBが10日に1回以上、-20以下になるとトレーニングパフォーマンスが落ちます。</string>
    <string name="diag_2_unit">回</string>

    <string name="diag_3_title_label">【3】レースコンディション</string>
    <string name="diag_3_subtitle_label">【TSB】</string>
    <string name="diag_3_ok">レースに理想的な体調になっています！\n今すぐ出ましょう！</string>
    <string name="diag_3_ng">レース向きのコンディションではありません</string>
    <string name="diag_3_description">レースや大会では+5前後のTSBが理想的と言われています（諸説あります）</string>
    <string name="diag_3_unit">TSS</string>

    <string name="diag_4_title_label">【4】強さの目標レベル</string>
    <string name="diag_4_subtitle_label">【CTL】</string>
    <string name="diag_4_ok">目標到達！！</string>
    <string name="diag_4_ng">CTL=50TSS目指して頑張りましょう</string>
    <string name="diag_4_description">一般人ではCTL=50TSSくらいを目標にすると良いようです（プロ選手だと100TSSくらいいくようですが・・・）</string>
    <string name="diag_4_unit">TSS</string>

    <string name="diag_5_title_label">【5】週間トレーニング量</string>
    <string name="diag_5_subtitle_label">【CTL】</string>
    <string name="diag_5_ok">最適なトレーニング負荷を維持できています！</string>
    <string name="diag_5_ng_under">トレーニング負荷が少ないみたいです</string>
    <string name="diag_5_ng_over">トレーニング負荷が多すぎるみたいです</string>
    <string name="diag_5_description">CTLは一気に上げるとマズいので、だいたい１週間で5TSSくらい積んでいくのが良いとのことです。</string>
    <string name="diag_5_unit">+TSS/週</string>

    <string name="diag_6_title_label">【6】オーバートレーニング</string>
    <string name="diag_6_subtitle_label">【CTL】</string>
    <string name="diag_6_ok">特に問題なしです。</string>
    <string name="diag_6_ng">ザ・オーバートレーニング</string>
    <string name="diag_6_description">CTLが1週間で7TSS以上増加が、4週間以上続くのはオーバートレーニングだそうですよ。</string>
    <string name="diag_6_unit">週連続</string>

    <string name="diag_7_title_label">【7】サボり疑惑チェック</string>
    <string name="diag_7_subtitle_label">【CTL】</string>
    <string name="diag_7_ok">マジメにやっているようです。</string>
    <string name="diag_7_ng">サボり疑惑発生中。</string>
    <string name="diag_7_description">CTLが2週間連続で低下していると、練習量（負荷・頻度）が不足しているとのこと。</string>
    <string name="diag_7_unit">週連続</string>

    <string name="diag_8_title_label">【8】オーバートレーニング</string>
    <string name="diag_8_subtitle_label">【ATL】</string>
    <string name="diag_8_ok">特に問題なしです。</string>
    <string name="diag_8_ng">急激にオーバートレーニングになっています！</string>
    <string name="diag_8_description">ATLは短期間の練習負荷で、これが1週間で70TSSを上回るのは、急に頑張りすぎ、オーバートレーニングです。</string>
    <string name="diag_8_unit">TSS</string>
    <string name="setting_y_axis_max">PMCのY軸最大値</string>
    <string name="setting_y_axis_min">PMCのY軸最小値</string>
    <string name="diag_hide_button_label">非表示</string>
    <string name="hide_confirm_dialog_title">確認</string>
    <string name="hide_confirm_dialog_message">この診断項目を非表示にしますか？(設定画面から再表示できます）</string>
    <string name="hide_confirm_dialog_yes">はい</string>
    <string name="hide_confirm_dialog_no">いいえ</string>

    <!-- MENU -->
    <string name="menu_2x15ftp">15分のFTPレベルを、短い休憩を挟んで2回</string>
    <string name="menu_3x15ftp">15分のFTPレベルを、短い休憩を挟んで3回</string>
    <string name="menu_SST30min">Sweet Spot Trainingレベルで30分</string>
    <string name="menu_SST45min">Sweet Spot Trainingレベルで45分</string>
    <string name="menu_SST60min">Sweet Spot Trainingレベルで60分</string>
    <string name="menu_mix30min">Zwiftで用意されているMIXメニュー(30分)</string>
    <string name="menu_mix60min">Zwiftで用意されているMIXメニュー(60分)</string>
    <string name="menu_tabata">タバタ式(FPT200%×20s、FTP50%×10sの8セット)</string>
    <string name="menu_fpt_test_short">FPTテスト(20分短縮版)</string>
    <string name="menu_fpt_test_long">FPTテスト（フル60分)</string>
    <string name="dialog_backup_done_title">バックアップ完了</string>
    <string name="dialog_backup_done_message">"練習記録、練習メニューのデータを以下の場所にバックアップ保存しました。  PCとUSB接続、メールやSNSに添付するなどして取り出して活用してください。  機種変更時は、新しい端末の同じ場所にフォルダを作ってコピーし、「ストレージから復旧」ボタンで復旧できます。   ■保存場所 %s  ■練習記録 %s  ■練習メニュー %s     "</string>
    <string name="dialog_backup_nothing_title">ファイルが見つからんです</string>
    <string name="dialog_backup_run_nothing_message">"練習記録のバックアップデータが見つかりません。  以下の場所にバックアップファイルを保存してから実行してみてください。\n\n■保存場所\n%s\n■練習記録\n%s"</string>
    <string name="dialog_backup_menu_nothing_message">"練習メニューのバックアップデータが見つかりません。 以下の場所にバックアップファイルを保存してから実行してみてください。\n\n■保存場所\n%s\n■練習メニュー\n%s"</string>
    <string name="app_ctl">現在の強さ（CTL）は%2dです</string>

</resources>